use Monaco in git gui

--- a/.gitconfig
+++ b/.gitconfig
@@ -23,3 +23,5 @@
 [color "sh"]
 	workdir = green bold
 	branch = cyan reverse
+[gui]
+	fontdiff = -family Monaco -size 11 -weight normal -slant roman -underline 0 -overstrike 0
