configure git to automatically set up tracking for remote branches

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,5 @@
 	branch = cyan reverse
 [gui]
 	fontdiff = -family Monaco -size 11 -weight normal -slant roman -underline 0 -overstrike 0
+[branch]
+	autosetupmerge = true
