hg: add `hg last` to mirror the git one

--- a/.hgrc
+++ b/.hgrc
@@ -39,6 +39,7 @@ qct=/usr/local/lib/hg/qct.py
 # Thanks: http://wikis.sun.com/display/SunOnMac/MercurialTips
 qstatus = status --rev -2:-1  # prints files changed (only) in the current patch
 qclear = qrefresh -X re:.     # empty current patch, but leave the diffs in the working copy
+last = log -l1 -p
 
 [extdiff]
 cmd.vdiff = fmdiff
