--- a/.hgrc
+++ b/.hgrc
@@ -59,7 +59,7 @@ filemerge.gui=True
 
 [pager]
 pager = LESS='FRX' less
-attend = help, log, glog, status, qstatus, incoming, outgoing, diff, qdiff, cat, annotate, unshelve
+attend = help, log, glog, status, qstatus, incoming, outgoing, diff, qdiff, cat, annotate, unshelve, last
 
 [hgk]
 path=~/bin/hgk
