hg: prompt extension, and begin using subrepos for extensions

--- a/.hgrc
+++ b/.hgrc
@@ -33,8 +33,9 @@ hgext.rebase =
 hgext.record =
 hgext.transplant =
 hgext.zeroconf =
-#hgshelve = /usr/local/lib/hg/hgshelve/hgshelve.py
-hgattic = /usr/local/lib/hg/attic.py
+#hgshelve = ~/.hglib/hgshelve/hgshelve.py
+hgattic = ~/.hglib/hgattic/attic.py
+prompt = ~/.hglib/hg-prompt/prompt.py
 qct=/usr/local/lib/hg/qct.py
 
 [alias]
