--- a/.vim/Rakefile
+++ b/.vim/Rakefile
@@ -6,6 +6,7 @@ require 'open-uri'
 
 GIT_BUNDLES = [
   'git://github.com/bronson/vim-ruby-block-conv.git',
+  'git://github.com/ches/vim-session.git',
   'git://github.com/godlygeek/tabular.git',
   'git://github.com/godlygeek/csapprox.git',
   'git://github.com/bloveridge/jslint.vim.git',
@@ -125,6 +126,9 @@ namespace :bundles do
       end
       cd('vim-javascript') do
         rm_rf %w[ extras tmp Rakefile ]
+      end
+      cd('vim-session') do
+        rm_rf %w[ INSTALL README.md TODO.md ]
       end
     end
 
