tmux: bug fixed for status, host-specific sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,9 +37,7 @@ set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %Y-%m
 set -g status-left-length 35
 set -g status-justify centre
 setw -g window-status-current-bg red
-# FIXME: a tmux bug seems to result in this #() command misbehaving currently:
-# http://www.mail-archive.com/tmux-users@lists.sourceforge.net/msg00712.html
-# set -g status-right "#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
+set -g status-right "#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
 
 # try to set wm window titles with xterm codes
 set -g set-titles on
@@ -111,22 +109,13 @@ bind-key S command-prompt "new-window -n %1 'ssh %1'"
 
 # Session initialization
 
-# Note:
-#   new  - alias for new-session
-#   neww - alias for new-window
-VIM=/Applications/Development/MacVim.app/Contents/MacOS/Vim
+# need a default session despite the conditionals below
+new-session -d -s throwaway
 
-# first session
-new -d -s main -n home
-
-# second session
-new -d -s noted-life
-set -t noted-life default-path "$HOME/src/work/andrew_hurd/noted_life"
-linkw -dk -t0 -s main:0
-neww -d -n vim 'exec $VIM .'
-neww -d -n rails
-splitw -v -t2
-select-layout -t2 even-vertical
+# this is the best way I can find to manage host-conditional sessions
+# with tmux's current config capabilities
+if '[ `hostname -s` = lupin ]' 'source-file $HOME/.tmux/lupin.conf'
+if '[ `hostname -s` = kodama ]' 'source-file $HOME/.tmux/kodama.conf'
 
 # switch-client -t main
 # select-window -t main:0
