tmux: sessions fix, guard session duplication on config reload

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,8 +114,8 @@ new-session -d -s throwaway
 
 # this is the best way I can find to manage host-conditional sessions
 # with tmux's current config capabilities
-if '[ `hostname -s` = lupin ]' 'source-file $HOME/.tmux/lupin.conf'
-if '[ `hostname -s` = kodama ]' 'source-file $HOME/.tmux/kodama.conf'
+if '[ `hostname -s` = lupin ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
+if '[ `hostname -s` = kodama ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/kodama.conf'
 
 # switch-client -t main
 # select-window -t main:0
