--- a/.tmux/kodama.conf
+++ b/.tmux/kodama.conf
@@ -2,5 +2,6 @@ new-session -d -s main -n tunes 'ncmpcpp'
 new-window -d -n home
 
 # get rid of the placeholder
+switch-client -t main
 kill-session -t throwaway
 
