--- a/.tmux/lupin.conf
+++ b/.tmux/lupin.conf
@@ -15,5 +15,6 @@ split-window -v -t2
 split-window -h -t rails.top
 
 # get rid of the placeholder
+switch-client -t main
 kill-session -t throwaway
 
