--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ unbind-key C-b
 # send the prefix to client inside window (ala nested sessions)
 bind-key a send-prefix
 
+# disable wait after escape, so vim is usable
+set-option -sg escape-time 0
+
 # in copy mode, use vi bindings and make the mouse work
 setw -g mode-keys vi
 setw -g mode-mouse on
@@ -27,6 +30,7 @@ set -g history-limit 5000
 # bells and monitoring
 set -g visual-activity on
 set -g visual-content on
+set -g visual-silence on
 set -g visual-bell on
 set -g bell-action any
 
@@ -63,10 +67,6 @@ bind-key R source-file ~/.tmux.conf
 # be easy to get used to
 bind-key C-a last-window
 
-# cycle to next pane
-# unbind o
-bind-key -r Tab select-pane -t :.+
-
 # vim-ish movement between and resizing of panes
 bind-key -r C-h select-pane -L
 bind-key -r C-j select-pane -D
@@ -83,10 +83,11 @@ bind-key K confirm kill-window
 bind-key X confirm kill-server
 
 bind-key m setw monitor-activity
+bind-key M command-prompt -p "interval (s)" "setw monitor-silence %%"
 
 # name window
 # unbind ,
-bind-key A command-prompt "rename-window %%"
+bind-key A command-prompt -I "#W" "rename-window %%"
 
 # Keys to switch session.
 bind-key Q switchc -t0
@@ -104,8 +105,8 @@ bind | split-window -h
 bind - split-window -v
 
 # whizbang custom keybindings
-bind-key / command-prompt "split-window 'exec man %%'"
-bind-key S command-prompt "new-window -n %1 'ssh %1'"
+bind-key / command-prompt -p "Man:" "split-window -h 'exec man %%'"
+bind-key S command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
 
 # Session initialization
 
