tmux: more sweetness

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set-option -sg escape-time 0
 setw -g mode-keys vi
 setw -g mode-mouse on
 
+# Ctrl-p/n for tmux command history -- the vi mode is more like shell vi mode
+# than vi command mode
+set-option -g status-keys emacs
+
 # scrollback buffer n lines
 set -g history-limit 5000
 
@@ -107,6 +111,9 @@ bind - split-window -v
 # whizbang custom keybindings
 bind-key / command-prompt -p "Man:" "split-window -h 'exec man %%'"
 bind-key S command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
+
+# present a menu of URLs to open from the visible pane. sweet.
+bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "cat /tmp/tmux-buffer | urlview"
 
 # Session initialization
 
